--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@ set -g default-terminal "screen-256color"
 set -s escape-time 1
 set -g status-keys vi
 setw -g mode-keys vi
+set -g base-index 1
+setw -g pane-base-index 1
 
 set -g prefix C-x
 unbind-key C-b
