tmux: don't use dim status text

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,7 @@ set -wg mode-style 'bg=#8ac6f2,fg=default'
 
 setw -g window-status-fg "#808080"
 setw -g window-status-bg default
-setw -g window-status-attr dim
+setw -g window-status-attr bright
 
 setw -g window-status-current-fg "#a8a8a8"
 setw -g window-status-current-bg default
