--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,7 +62,7 @@ bind -n C-Right if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind -n IC paste-buffer
 
-#bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S - ; save-buffer %1 ; delete-buffer'
+bind-key P command-prompt -p 'Save tmux buffer to:' -I '~/tmux.history' 'capture-pane -S - ; save-buffer %1 ; delete-buffer'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
